--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap');
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,4 +15,5 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Raleway', sans-serif;
 }
