--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap');
 
 
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -17,3 +18,7 @@ body {
   overflow-x: hidden;
   font-family: 'Raleway', sans-serif;
 }
+
+/* h1, h2, h3, h4, h5, h6 {
+  font-family: 'Bitter', serif;
+} */
