--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 
 
@@ -16,9 +18,23 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Inter', sans-serif;
+  background-color: #FAFAFA;
 }
 
-/* h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bitter', serif;
-} */
+.aws-btn {
+
+  --slider-height-percentage: 100%;
+  --slider-transition-duration: 700ms;
+  --organic-arrow-thickness: 4px;
+  --organic-arrow-border-radius: 0px;
+  --organic-arrow-height: 40px;
+  --organic-arrow-color: #26456f;
+  --control-button-width: 10%;
+  --control-button-height: 25%;
+  --control-button-background: transparent;
+  --control-bullet-color: #2d5182;
+  --control-bullet-active-color: #26456f;
+  --loader-bar-color: #851515;
+  --loader-bar-height: 6px;
+  }
