--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
   background-color: #FAFAFA;
 }
 
