--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,15 @@ ul {
   padding-left: 1.5rem;
 }
 
+ol {
+  list-style-type: decimal;
+  padding-left: 1.5rem;
+}
+
+a {
+  color: #36A15B;
+}
+
 .aws-btn {
 
   --slider-height-percentage: 100%;
